corrects top actions on tablet and desktop

--- a/src/styles/blocks/lang-toggler.scss
+++ b/src/styles/blocks/lang-toggler.scss
@@ -25,11 +25,13 @@
 
     @include onTablet {
       display: none;
+      margin-right: 0;
     }
   }
 
   @include onTablet {
     display: block;
     order: 1;
+    margin-right: 0;
   }
 }
